Closed Bug 75448 Opened 25 years ago Closed 25 years ago

Clear disk cache from prefs not working properly

Categories

(Core :: Networking: Cache, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla0.9

People

(Reporter: tever, Assigned: gordon)

Details

Attachments

(1 file)

When I clear the disk cache from prefs | advanced | cache, not all cached files are deleted. It seems to delete approximately half the entries for every time I click the clear button. So, to completely clear the cache you need to press clear 5 or 6 times. This is happening on 4/10/01 builds - Mac, Linux and Win.
Preparing a patch for this.
Target Milestone: --- → mozilla0.9
sr=darin (reviewed with gordon)
patch checked in. Marking FIXED.
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
verified 7/10 builds - all platforms
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: