Fix bug 75448 "Clear disk cache from prefs not working properly". Patch by beard, r=gordon, sr=darin.